tests/samples/positive/functions/function_type_basic.ax
module function_type_basic;

type BinaryOp = fn(i32, i32) -> i32;

fn add(left: i32, right: i32) -> i32 {
    return left + right;
}

fn apply(op: BinaryOp, left: i32, right: i32) -> i32 {
    return op(left, right);
}

fn main() -> i32 {
    let op: BinaryOp = add;
    return apply(op, 20, 22) - 42;
}
