tests/samples/negative/generics/generic_bound_rejected_m2.ax
module generic_bound_rejected_m2;

fn max[T: Ord](left: T, right: T) -> T {
    return left;
}

fn main() -> i32 {
    return 0;
}
